# toro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: APF.h  CMakeLists.txt  DecayDiffuser.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SinglePoleLowpass.h  Tank.cpp  Tank.h
source/algorithms/: AlgorithmType.h  DatorroSimple.cpp  DatorroSimple.h  Lexicon.cpp  Lexicon.h  ReverbBase.h
source/utils/: DatorroInputStage.cpp  DatorroInputStage.h  DatorroTank.cpp  DatorroTank.h  LexiconInputStage.h  LexiconTank.cpp  LexiconTank.h
